--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
   <script src="https://kit.fontawesome.com/7a7c3cb884.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-<div class="d-flex bg-warning">
-  <h1>
-    Hello world
-  </h1>
-  <p>
-    Hi there
-  </p>
-  <i class="fa-solid fa-magnifying-glass"></i>
-  </div>
+<div class="hero">
+<p>👋 Hello, I am</p>
+<h1>Mirna Fakin</h1>
+<h2 class="mb-5">Front-end developer based in Croatia</h2>
+<div>
+<a href="#" class="btn btn-branding">Contact me</a>
+</div>
+</div>
 </body>
 </html>
