Added nav bar to homepage

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo-sm.jpeg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="active"><a href="/"> Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Mirna Fakin</h1>
@@ -60,7 +79,8 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              A weather app is a way to check current, past, or future weather forecast anywhere in the world.
+              A weather app is a way to check current, past, or future weather
+              forecast anywhere in the world.
             </p>
             <a href="#" class="btn btn-branding-outline"> Learn more</a>
           </div>
@@ -77,7 +97,8 @@
           <div class="project-description">
             <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
-              Dictionary consists of an alphabetical list of words with their meanings and a guide to accepted pronunciation.
+              Dictionary consists of an alphabetical list of words with their
+              meanings and a guide to accepted pronunciation.
             </p>
             <a href="#" class="btn btn-branding-outline"> Learn more</a>
           </div>
