--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:mirna.fakin@gmail.com" class="email-link">mirna.fakin@gmail.com</a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/fakinmirna/" target="_blank">
+            <i class="fa-brands fa-square-instagram"></i>
+          </a>
+          <a href="https://github.com/fakin-mirna/" target="_blank">
+            <i class="fa-brands fa-square-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/mirna-fakin/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
