Made the website SEO friendly and fixed the navigation and links.
Also, set up the css for the btn class.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Mirna is a front-end engineer based in Zagreb, Croatia.">
+    <title>Front-end developer - Mirna Fakin</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -32,19 +33,19 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="Mirna Logo" />
           <img
             src="images/logo-sm.jpeg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Mirna Logo"
           />
         </a>
         <ul>
-          <li class="active"><a href="/"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li class="active"><a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About page"> About</a></li>
+          <li><a href="/work.html" title="Mirna's work"> Work</a></li>
+          <li><a href="/contact.html" title="Contact Mirna"> Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -54,14 +55,14 @@
       <h1>Mirna Fakin</h1>
       <h2 class="mb-5">Front-end developer based in Croatia</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">See more info about my best projects below</p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/yogurt.png" class="img-fluid" alt="Yogurt project preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -70,7 +71,7 @@
               Yogurt is a food produced by bacterial fermentation of milk. The
               bacteria used to make yogurt are known as yogurt cultures.
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
         </div>
       </div>
@@ -82,16 +83,16 @@
               A weather app is a way to check current, past, or future weather
               forecast anywhere in the world.
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img src="images/weather.png" class="img-fluid" alt="Weather project preview" />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/dictionary.png" class="img-fluid" alt="Dictionary app preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -100,34 +101,35 @@
               Dictionary consists of an alphabetical list of words with their
               meanings and a guide to accepted pronunciation.
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
         </div>
       </div>
-      <footer>
+      <footer class="container">
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work inquiry</h4>
+            <h3>Work inquiry</h4>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Mirna">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:mirna.fakin@gmail.com" class="email-link">mirna.fakin@gmail.com</a>
+        <a href="mailto:mirna.fakin@gmail.com" class="email-link" title="Email Mirna">mirna.fakin@gmail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/fakinmirna/" target="_blank">
+          <a href="https://www.instagram.com/fakinmirna/" target="_blank" title="Instagram profile">
             <i class="fa-brands fa-square-instagram"></i>
           </a>
-          <a href="https://github.com/fakin-mirna/" target="_blank">
+          <a href="https://github.com/fakin-mirna/" target="_blank" title="GitHub profile">
             <i class="fa-brands fa-square-github"></i>
           </a>
-          <a href="https://www.linkedin.com/in/mirna-fakin/" target="_blank">
+          <a href="https://www.linkedin.com/in/mirna-fakin/" target="_blank" title="LinkedIn profile">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </div>
+        <p class="text-center mt-5">✌️ This project was coded by Mirna and it is <a href="https://github.com/fakin-mirna/portfolio-project" target="_blank">open-sourced.</a></p>
       </footer>
     </div>
   </body>
