--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Find out more about Mirna Fakin">
+    <title>About Mirna Fakin</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -30,6 +31,24 @@
     ></script>
   </head>
 <body>
+      <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="Mirna Logo" />
+          <img
+            src="images/logo-sm.jpeg"
+            class="logo d-block d-md-none"
+            alt="Mirna Logo"
+          />
+        </a>
+        <ul>
+          <li><a href="/" title="Homepage"> Home</a></li>
+          <li class="active"><a href="/about.html" title="About page"> About</a></li>
+          <li><a href="/work.html" title="Mirna's work"> Work</a></li>
+          <li><a href="/contact.html" title="Contact Mirna"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   <div class="content-container container">
     <div class="row">
       <div class="col-md-6">
@@ -37,7 +56,7 @@
         <h1 class="mb-4">Hi I am Mirna Fakin</h1>
         <h2 class="mb-4">Frontend developer based in Zagreb</h2>
         <p class="mb-5">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged  with different exercises, and everything is well explained, homework and deadlines are good for keep focus.</p>
-        <a href="" class="btn btn-branding">See my projects</a>
+        <a href="/work.html" class="btn btn-branding">See my projects</a>
       </div>
       </div>
       <div class="col-lg-6">
@@ -45,5 +64,31 @@
       </div>
     </div>
   </div>
+        <footer class="container">
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Mirna">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:mirna.fakin@gmail.com" class="email-link" title="Email Mirna">mirna.fakin@gmail.com</a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/fakinmirna/" target="_blank" title="Instagram profile">
+            <i class="fa-brands fa-square-instagram"></i>
+          </a>
+          <a href="https://github.com/fakin-mirna/" target="_blank" title="GitHub profile">
+            <i class="fa-brands fa-square-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/mirna-fakin/" target="_blank" title="LinkedIn profile">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
+        <p class="text-center mt-5">✌️ This project was coded by Mirna and it is <a href="https://github.com/fakin-mirna/portfolio-project" target="_blank">open-sourced.</a></p>
+      </footer>
 </body>
 </html>
